# climate-detective

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  hackathon-demo-guide.md  pyproject.toml
app/: __init__.py  analysis.py  config.py  home_assistant.py  main.py  models.py  periods.py  summarizer.py
static/: app.js  index.html  styles.css
tests/: test_analysis.py  test_api.py  test_config.py  test_home_assistant.py  test_periods.py  test_summarizer.py
